# billwiki

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  design-notes.md
.github/actions/: test-rust.yml
.github/workflows/: dhall-drift.yml  test-rust.yml
actions/: deps.dhall  dhall-drift.dhall  rust-actions.dhall  test-rust.dhall
js/app/: package.json  schema.json  tailwind.config.js  tsconfig.json
js/app/public/: index.html
js/app/src/: App.module.scss  App.tsx  client.ts  index.css  index.tsx
js/app/src/components/: Button.module.scss  Button.tsx  NewPage.tsx  Page.tsx  PageEditor.module.scss  PageEditor.tsx  PageHistory.tsx  SearchResults.module.scss  SearchResults.tsx
js/app/src/components/Page/: Page.tsx
js/app/src/components/system/: Button.tsx  Header.tsx  List.tsx  Rule.tsx  TextInput.tsx  TopBar.tsx
js/app/src/lib/: fragments.ts  links.ts  markdown.ts  markdown.tsx  mousetrap.ts  mutations.ts
js/app/typings/remark-wiki-link/: index.d.ts
src/: main.rs  schema.rs
src/search_actor/: mod.rs
src/store/: history.rs  mod.rs
