[package]
name = "billwiki"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.6"
actix-web = "3.3.2"
actix = "0.12.0"
actix-cors = "0.5.4"
tokio = "1.7.1"
git2 = "0.13.20"
tantivy = "0.15.2"
rust-embed = "5.9.0"
anyhow = "1.0.41"
serde_json = "1.0"
serde = "1.0.126"
env_logger = "0.8.4"
log = "0.4.0"
structopt = "0.3.25"
mime_guess = "2.0.3"
